# CLionOpenGLSetUp

./: .gitignore  Application.cpp  CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
res/Shader/: fragmentShader.glsl  vertexShader.glsl
